--- a/frontend-zs/src/components/games/quizTimer/CorrectAnswerCircle.scss
+++ b/frontend-zs/src/components/games/quizTimer/CorrectAnswerCircle.scss
@@ -10,7 +10,10 @@
     height: 100%;
     background-color: #eeeeee;
     border: 4px solid #f38f1f;
-    font-size: 23px;
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
   }
 
   .correct-answer-circle .circle.correct {
